syntax = "proto3";

package com.mintter.peer.v1alpha;

option go_package = "mintter/api/go/peer/v1alpha;peer";

service Peer {
  rpc Handshake(HandshakeInfo) returns (HandshakeInfo);

  rpc Ping(PingRequest) returns (PingResponse);

  rpc GetObjectVersion(GetObjectVersionRequest) returns (Version);
}

message HandshakeInfo {
  Version profile_version = 1;
}

message PingRequest {}

message PingResponse {}

message GetObjectVersionRequest {
  string object_id = 1;
}

message Version {
  repeated PeerVersion version_vector = 1;
}

message PeerVersion {
  string peer = 1;

  string head = 2;

  uint64 seq = 3;

  uint64 lamport_time = 4;
}